rust_caption/error.log
    Checking rust_caption v0.1.0 (E:\Ai\ComfyUI\ComfyUI\custom_nodes\caption-live\rust_caption)
error[E0423]: expected function, found module `resvg::render`
   --> src\lib.rs:145:21
    |
145 |                     resvg::render(
    |                     ^^^^^^^^^^^^^ not a function

error[E0603]: module `render` is private
   --> src\lib.rs:145:28
    |
145 |                     resvg::render(
    |                            ^^^^^^ private module
    |
note: the module `render` is defined here
   --> C:\Users\X\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\resvg-0.36.0\src\lib.rs:28:1
    |
 28 | mod render;
    | ^^^^^^^^^^

warning: unused import: `BlendMode`
 --> src\lib.rs:2:49
  |
2 | use tiny_skia::{Pixmap, Transform, PixmapPaint, BlendMode};
  |                                                 ^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0599]: no function or associated item named `new_from_bytes` found for struct `Pixmap` in the current scope
   --> src\lib.rs:104:34
    |
104 |         let mut pixmap = Pixmap::new_from_bytes(&mut final_frame_data, width, height).ok_or_else(|| {
    |                                  ^^^^^^^^^^^^^^ function or associated item not found in `Pixmap`
    |
note: if you're trying to build a new `Pixmap` consider using one of the following associated functions:
      Pixmap::new
      Pixmap::from_vec
      Pixmap::decode_png
      Pixmap::load_png
   --> C:\Users\X\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\tiny-skia-0.11.4\src\pixmap.rs:43:5
    |
 43 |     pub fn new(width: u32, height: u32) -> Option<Self> {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
 62 |     pub fn from_vec(data: Vec<u8>, size: IntSize) -> Option<Self> {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
 76 |     pub fn decode_png(data: &[u8]) -> Result<Self, png::DecodingError> {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
162 |     pub fn load_png<P: AsRef<std::path::Path>>(path: P) -> Result<Self, png::DecodingError> {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0599]: no function or associated item named `new` found for struct `Size` in the current scope
   --> src\lib.rs:133:47
    |
133 |                     default_size: usvg::Size::new(width as f32, height as f32).unwrap(),
    |                                               ^^^ function or associated item not found in `Size`
    |
note: if you're trying to build a new `Size`, consider using `Size::from_wh` which returns `Option<Size>`
   --> C:\Users\X\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\tiny-skia-path-0.11.4\src\size.rs:139:5
    |
139 |     pub fn from_wh(width: f32, height: f32) -> Option<Self> {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: there is a method `ne` with a similar name, but with different arguments
   --> /rustc/ed61e7d7e242494fb7057f2657300d9e77bb4fcb\library\core\src\cmp.rs:264:5

error[E0063]: missing field `image_href_resolver` in initializer of `Options`
   --> src\lib.rs:124:27
    |
124 |                 let opt = Options {
    |                           ^^^^^^^ missing `image_href_resolver`

warning: unused import: `std::str::FromStr`
 --> src\lib.rs:4:5
  |
4 | use std::str::FromStr;
  |     ^^^^^^^^^^^^^^^^^

warning: unused variable: `highlight`
 --> src\lib.rs:7:54
  |
7 | ... width: u32, height: u32, highlight: bool, font_family: &str, font_size: f64, fill_color: &str, stroke_color: &str) -> String {
  |                              ^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_highlight`
  |
  = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

Some errors have detailed explanations: E0063, E0423, E0599, E0603.
For more information about an error, try `rustc --explain E0063`.
warning: `rust_caption` (lib) generated 3 warnings
error: could not compile `rust_caption` (lib) due to 5 previous errors; 3 warnings emitted
